[CRNT-40874] : Fix for perspective selector horizontal position on panel unpin on IE. Bug: CRNT-40874

--- a/skins/modern/src/main/resources/META-INF/xhtml/modern-main.css
+++ b/skins/modern/src/main/resources/META-INF/xhtml/modern-main.css
@@ -9739,6 +9739,7 @@ img[src *='world_go.png'].nodeMenuIcon {
 /* IE10+ CSS styles go here */
 	.perspective-series-wrapper {
 		top:112px;
+		left:37px;
 	}
 }
 
